# pineapplehub

./: CHANGELOG.md  Cargo.toml  README.md  README_zh.md  Trunk.toml  index.html  main.py  pyproject.toml  rust-toolchain.toml
assets/: README.md
docs/: roi_known_issues.md
docs/algorithms/: algorithm.md  algorithm_zh.md  fruitlet_segmentation.md  fruitlet_segmentation_zh.md
js/: initializer.js
src/: correction.rs  error.rs  icons.rs  intermediate.rs  main.rs  ui.rs  upload.rs
src/history/: mod.rs  model.rs  store.rs
src/pipeline/: fast.rs  mod.rs  roi_extraction.rs  scale_calibration.rs  unwrap_metrics.rs
src/ui/: help_overlay.rs  history_view.rs  preview.rs  viewer.rs
src/ui/preview/: thumbnail.rs
